# safe-pdf

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  clippy.yml
crates/pdf-canvas/: Cargo.toml  README.md
crates/pdf-canvas/src/: canvas.rs  canvas_backend.rs  canvas_clip_ops.rs  canvas_color_ops.rs  canvas_external_object_ops.rs  canvas_graphics_state_ops.rs  canvas_marked_content_ops.rs  canvas_path_ops.rs  canvas_state.rs  canvas_text_ops.rs  error.rs  lib.rs  pdf_canvas.rs  pdf_path.rs  recording_canvas.rs  text_state.rs  truetype_font_renderer.rs  type1_font_renderer.rs  type3_font_renderer.rs
crates/pdf-content-stream/: Cargo.toml
crates/pdf-content-stream/src/: clipping_path_operators.rs  color_operators.rs  error.rs  graphics_state_operators.rs  lib.rs  marked_content_operators.rs  operation_map.rs  operator_tokenizer.rs  path_operators.rs  path_paint_operators.rs  pdf_operator.rs  pdf_operator_backend.rs  recording_pdf_operator_backend.rs  shadings_operators.rs  text_object_operators.rs  text_positioning_operators.rs  text_showing_operators.rs  text_state_operators.rs  type3_font_operators.rs  xobject_and_image_operators.rs
crates/pdf-content-stream/src/pdf_operator/: mod.rs  operands.rs  operator_trait.rs  variants.rs
crates/pdf-document/: Cargo.toml
crates/pdf-document/src/: error.rs  lib.rs
crates/pdf-font/: Cargo.toml
crates/pdf-font/src/: character_map.rs  characther_map.rs  cid_font.rs  error.rs  font.rs  font_descriptor.rs  glyph_widths_map.rs  lib.rs  simple_font_glyph_map.rs  true_type_font.rs  type0_font.rs  type1_font.rs  type3_font.rs
crates/pdf-font/src/cff/: char_string_interpreter.rs  char_string_interpreter_stack.rs  char_string_operator.rs  charset.rs  cursor.rs  encoding.rs  error.rs  mod.rs  parser.rs  program.rs  reader.rs  standard_strings.rs  top_dictionary_entry.rs  top_dictionary_operator.rs
crates/pdf-font/tests/: true_type_font_parse.rs
crates/pdf-graphics/: Cargo.toml  README.md
crates/pdf-graphics-femtovg/: Cargo.toml
crates/pdf-graphics-femtovg/src/: femtovg_canvas_backend.rs  lib.rs
crates/pdf-graphics-skia/: Cargo.toml
crates/pdf-graphics-skia/src/: skia_canvas_backend.rs
crates/pdf-graphics/src/: canvas.rs  canvas_backend.rs  canvas_clip_ops.rs  canvas_color_ops.rs  canvas_external_object_ops.rs  canvas_graphics_state_ops.rs  canvas_path_ops.rs  canvas_text_ops.rs  color.rs  error.rs  lib.rs  pdf_canvas.rs  pdf_path.rs  point.rs  text_renderer.rs  transform.rs  truetype_font_renderer.rs  type3_font_renderer.rs
crates/pdf-object/: Cargo.toml
crates/pdf-object/src/: array.rs  cross_reference_table.rs  dictionary.rs  error.rs  hex_string.rs  indirect_object.rs  lib.rs  literal_string.rs  name.rs  number.rs  object_collection.rs  object_variant.rs  stream.rs  traits.rs  version.rs
crates/pdf-page/: Cargo.toml
crates/pdf-page/src/: bbox.rs  color_space.rs  content_stream.rs  error.rs  external_graphics_state.rs  form.rs  function.rs  image.rs  lib.rs  matrix.rs  media_box.rs  page.rs  pages.rs  pattern.rs  resources.rs  shading.rs  xobject.rs
crates/pdf-parser/: Cargo.toml
crates/pdf-parser/src/: array.rs  boolean.rs  comment.rs  cross_reference_table.rs  dictionary.rs  error.rs  header.rs  hex_string.rs  indirect_object.rs  lib.rs  literal_string.rs  name.rs  null.rs  number.rs  parser.rs  stream.rs  (+2 more)
crates/pdf-postscript/: Cargo.toml
crates/pdf-renderer/: Cargo.toml
crates/pdf-tokenizer/: Cargo.toml
examples/: Cargo.toml  femtovg.rs  skia.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: parse_object.rs
pdf-ast/: Cargo.toml
pdf-content-stream/src/: clipping_path_operators.rs  graphics_state_operators.rs  marked_content_operators.rs  path_paint_operators.rs  recording_pdf_operator_backend.rs  text_object_operators.rs  text_positioning_operators.rs
pdf-document/: Cargo.toml
pdf-document/src/: error.rs  lib.rs
pdf-document/tests/: document_read.rs
pdf-font/: Cargo.toml
pdf-font/src/: characther_map.rs  cid_font.rs  error.rs  font.rs  font_descriptor.rs  glyph_widths_map.rs  lib.rs
pdf-graphics/: Cargo.toml  README.md
pdf-graphics-femtovg/: Cargo.toml
pdf-graphics-femtovg/src/: femtovg_canvas_backend.rs
pdf-graphics-skia/: Cargo.toml
pdf-graphics-skia/src/: lib.rs  skia_canvas_backend.rs
pdf-graphics/src/: canvas_path_ops.rs  error.rs  lib.rs  pdf_canvas.rs  pdf_path.rs  transform.rs
pdf-object/: Cargo.toml
pdf-object/src/: array.rs  boolean.rs  comment.rs  cross_reference_table.rs  dictionary.rs  error.rs  hex_string.rs  indirect_object.rs  lib.rs  literal_string.rs  name.rs  null.rs  number.rs  object_collection.rs  stream.rs  trailer.rs
pdf-operator/: Cargo.toml
pdf-operator/src/: clipping_path_operators.rs  color_operators.rs  error.rs  graphics_state_operators.rs  lib.rs  marked_content_operators.rs  operation_map.rs  operator_tokenizer.rs  path_operators.rs  path_paint_operators.rs  pdf_operator.rs  pdf_operator_backend.rs  recording_pdf_operator_backend.rs  text_object_operators.rs  text_positioning_operators.rs  text_showing_operators.rs  text_state_operators.rs  xobject_and_image_operators.rs
pdf-page/: Cargo.toml
pdf-page/src/: content_stream.rs  error.rs  external_graphics_state.rs  lib.rs  media_box.rs  page.rs  pages.rs  resources.rs
pdf-painter/: Cargo.toml
pdf-painter/src/: clipping_path_operators.rs  color_operators.rs  graphics_state_operators.rs  lib.rs  marked_content_operators.rs  path_operators.rs  path_paint_operators.rs  text_object_operators.rs  text_positioning_operators.rs  text_showing_operators.rs  text_state_operators.rs  xobject_and_image_operators.rs
pdf-parser/: Cargo.toml  README.md
pdf-parser/src/: array.rs  boolean.rs  comment.rs  cross_reference_table.rs  dictionary.rs  error.rs  header.rs  hex_string.rs  indirect_object.rs  lib.rs  literal_string.rs  name.rs  null.rs  number.rs  stream.rs  trailer.rs
pdf-parser/tests/: parser_tests.rs
pdf-renderer/: Cargo.toml
pdf-renderer/src/: lib.rs
pdf-tokenizer/: Cargo.toml
pdf-tokenizer/src/: error.rs  lib.rs
(+9 files in other folders)
