[package]
name = "pdf-graphics-femtovg"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rr"
test = false
bench = false

[dependencies]
ab_glyph = "0.2.26"
bytemuck = {version = "1.15.0", features = ["derive"] }
nalgebra = "0.32.5"
smallvec = "1.13.2"
wgpu = "24.0.0"
env_logger = "0.11.3"
futures = "0.3.30"
image = "0.25.1"
winit = "0.29.15"
femtovg = { version = "0.14.0", features = ["wgpu"] }
pdf-renderer = { path = "../pdf-renderer" }
pdf-document = { path = "../pdf-document" }
pdf-graphics = { path = "../pdf-graphics" }
ttf-parser = "0.19"