[package]
name = "pdf-content-stream"
version = "0.1.0"
edition = "2024"

# Inherit all lint configurations from the workspace root
[lints]
workspace = true

[dependencies]
pdf-parser = { path = "../pdf-parser" }
pdf-tokenizer = { path = "../pdf-tokenizer" }
pdf-object = { path = "../pdf-object" }
pdf-graphics = { path = "../pdf-graphics" }
thiserror = "2.0.12"
num-traits = "0.2.19"