[package]
name = "pdf-font"
version = "0.1.0"
edition = "2024"

# Inherit all lint configurations from the workspace root
[lints]
workspace = true

[dependencies]
pdf-object = { path = "../pdf-object" }
pdf-content-stream = { path = "../pdf-content-stream" }
pdf-graphics = { path = "../pdf-graphics" }
bitflags = "2.9.1"
thiserror = "2.0.12"
num-traits = "0.2.19"
num-derive = "0.4"