[package]
name = "pdf-page"
version = "0.1.0"
edition = "2024"

# Inherit all lint configurations from the workspace root
[lints]
workspace = true

[dependencies]
pdf-object = { path = "../pdf-object" }
pdf-content-stream = { path = "../pdf-content-stream" }
pdf-font = { path = "../pdf-font" }
pdf-graphics = { path = "../pdf-graphics" }
pdf-postscript = { path = "../pdf-postscript" }
thiserror = "2.0.12"